; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/winfile/extr_winefile.c_refresh_drives.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/winfile/extr_winefile.c_refresh_drives.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i64 }
%struct.TYPE_4__ = type { i32, i32 }

@Globals = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8
@WM_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @refresh_drives to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @refresh_drives() #0 {
  %1 = alloca %struct.TYPE_4__, align 4
  %2 = load i64, i64* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @Globals, i32 0, i32 1), align 8
  %3 = call i32 @DestroyWindow(i64 %2)
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @Globals, i32 0, i32 1), align 8
  %4 = call i32 (...) @create_drive_bar()
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @Globals, i32 0, i32 0), align 8
  %6 = call i32 @GetClientRect(i32 %5, %struct.TYPE_4__* %1)
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @Globals, i32 0, i32 0), align 8
  %8 = load i32, i32* @WM_SIZE, align 4
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @MAKELONG(i32 %10, i32 %12)
  %14 = call i32 @SendMessageW(i32 %7, i32 %8, i32 0, i32 %13)
  ret void
}

declare dso_local i32 @DestroyWindow(i64) #1

declare dso_local i32 @create_drive_bar(...) #1

declare dso_local i32 @GetClientRect(i32, %struct.TYPE_4__*) #1

declare dso_local i32 @SendMessageW(i32, i32, i32, i32) #1

declare dso_local i32 @MAKELONG(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
